fix: overflow

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   font-family: sans-serif;
   box-sizing: border-box;
   padding: 64px;
+  min-width: 320px;
 }
 
 h4 {
@@ -80,7 +81,6 @@ header {
   margin: 0px 0px 8px 0px;
   display: flex;
   align-items: center;
-  overflow: auto;
 }
 
 .main-block > img {
@@ -105,7 +105,6 @@ header {
 }
 
 .code-example {
-  overflow-x: auto;
   margin: 0px 0px 8px 0px;
 }
 
@@ -124,16 +123,12 @@ header {
   margin: 0px 0px 8px 0px;
 }
 
-.courses > ul {
-  overflow: auto;
-}
-
 .lang > ul, .skills > ul {
   margin: 0px;
   list-style-type: disc;
-  padding: revert;
+  padding: 0px 0px 8px 40px;
   overflow: auto;
-  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 footer {
